# faceid

./: LICENSE  ROCK,PAPER,SCISSORS1.py
FACE ID/: Requirement.txt  face_engine.py  main.py  rpi runner.py  server.py  test_system.py
FACE ID/Hand tracking/: handtracking.py
FACE ID/core/: __init__.py  face_engine.py
FACE ID/face-id-engine/: README.md  logs  pyproject.toml  requirements.txt
FACE ID/face-id-engine/scripts/: run.sh
FACE ID/face-id-engine/src/: audit.py  camera.py  cli.py  database.py  encryption.py  engine.py  liveness.py
FACE ID/face-id-engine/tests/: test_database.py  test_encryption.py  test_engine.py
